# WebVideoDownloader

./: .gitignore  README.md  index.html  package.json  tsconfig.app.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Cargo.toml.append  tauri.conf.json
src-tauri/downloader-cli/: .gitignore  Cargo.toml
src-tauri/downloader-cli/src/: hls.rs  main.rs
src-tauri/src/: lib.rs  main.rs  main_url_title_from_html.rs  user.json  window_utils.rs
src-tauri/src-tauri/src/: playlist.json  user.json
src-tauri/src/backend/: auth.rs  download_chunk_writer.rs  download_helpers.rs  download_manager.rs  download_pause_monitor.rs  download_progress.rs  downloads.rs  filesystem.rs  http_client_helper.rs  listing.rs  mod.rs  panel_playlist.rs  panel_playlist_service.rs  playlist.rs  playlist_service.rs  user.rs  user_service.rs
src-tauri/src/commands/: auth.rs  download_manager.rs  folder.rs  mod.rs  panel_playlist.rs  playlist.rs  user.rs  video.rs
src-tauri/tests/: integration_auth.rs  integration_folder.rs  integration_playlist.rs  integration_user.rs
src-tauri/user_data/: user.json
src/components/: DownloadList.tsx  VideoList.tsx  VideoListItem.tsx
src/components/EditDownloadModal/: index.ts  (+1 more)
src/context/: DownloadsContext.tsx  DownloadsContextValue.ts  useDownloads.ts
src/lib/: invokeWithErrorLog.ts  listVideos.ts  routerSetup.tsx
src/service/: baixarVideo.ts  downloadsService.ts  openFolder.ts  panelPlaylistsService.ts  pausarDownload.ts  pauseDownloadById.ts  pollDownloadsProgress.ts  resumeDownload.ts
src/types/: download.ts  playlist.ts  user.ts  video.ts
user_data/: download_progress.json  last_player_html.html  panel_playlists.json  user.json
(+12 files in other folders)
