[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.11.23", features = ["blocking", "default-tls", "stream"] }
futures-util = "0.3.32"
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
