[package]
name = "web_video_downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "web_video_downloader"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.11.23", features = ["blocking", "default-tls", "stream"] }
futures-util = "0.3.32"
regex = "1"
uuid = { version = "1.20.0", features = ["v4"] }
once_cell = "1.21.4"
bytes = "1.11.1"
rand = "0.9.2"
aes = "0.7.5"
block-modes = "0.8.1"
block-padding = "0.3.3"
hex = "0.4.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }


[[bin]]
name = "web_video_downloader_bin"
path = "src/main.rs"
